// 2.55 Change Log
// Updated 28th April, 2022

Fix dmap script restarting issues
	( Deedee, Apr 28, 2022 )

Add 'npc->InvFlicker' to match 'Hero->InvFlicker'
Add the new features from lock blocks to locked chests as well
	Also, locked chests and boss-locked chests can now display a separate button-prompt
	pop-up when you are unable to open them.
Add 'open chest' sfx for chest combos
Allow light targets to block light
Add active shields (must hold button down to block)
Add active clocks, 'Kill All Enemies', and the new itemclass 'Refiller' which
	acts as an active version of a counter refilling item.
	( EmilyV, Apr 27, 2022 )

-- Apr 25th nightly build

Fix issues with rotate/flip in combo editor
Fix several issues with map flags, and added new shortcuts:
	CTRL+Click will 'floodfill' a flag
	ALT+Click will 'select' a flag
	Holding SHIFT while in flag placement temporarily 'selects' the (None) flag,
		acting like an eraser.
	( EmilyV, Apr 25, 2022 )
Add option to skip warning when placing flags on a layer they "don't work on"
	( Deedee, Apr 25, 2022 )

Add counter names to 'ZInfo' so that they can be renamed per-quest
	( EmilyV, Apr 24, 2022 )

-- Apr 24th nightly build

Fix scrolling in dialog pop-ups carrying over to combo pane
Add Combo Types and Mapflags to 'ZInfo', allowing custom names and
	help text per-quest. Updated default names for some flags.
	Hid unimplemented flags from view.
New ZScript binary/octal format option
Add visual button prompts for signposts/chests, and a 'ButtonPrompt' combo type
	to display button prompts generically.
Add 'Hero->TileMod' (read-only),
	'Hero->Kill(bool bypass_revive)',
	'Hero->Immortal'
	( EmilyV, Apr 24, 2022 )

Add 'generic' scripts, which can either:
	-Run 'frozen', similar to Active Subscreen and onF6 slots
	-Run 'passively' similar to Global Active, except, while running
		passively, 'WaitTo()' can be used to wait until precise timings
		within a frame.
	( EmilyV, Apr 20, 2022 )
Raft fixes
	( Deedee, Apr 20, 2022 )
